Fix parse --add-opens VM arguments from ini file
Signed-off-by: Alexandr Sanarov <alexandr.sanarov@xored.com>
Change-Id: If1cf6c0fded47c21cc69ba03f9c4a1bb95bd2d99